--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "lucide-react": "^0.522.0"
+    "lucide-react": "^0.522.0",
+    "react-icons": "^5.5.0"
   }
 }
